--- a/src/scripts/components/lock-segment.scss
+++ b/src/scripts/components/lock-segment.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   grid-column: 1;
   grid-row: 1;
-  margin: 0 0.3rem;
+  margin: 0 calc(0.3 * var(--h5p-theme-spacing-s));
   user-select: none;
   -webkit-touch-callout: none;
   min-width: var(--combination-lock-min-target-size);
